<resources>
    <string name="app_name">Life Source</string>
    <string name="pager_title_data_input">Symptoms</string>
    <string name="pager_title_nasa">NASA</string>
    <string name="pager_title_maps">Near Me</string>
    <string name="remove_item_option">Remove Item</string>
    <string name="positive_button_create">Create</string>
    <string name="text_you">You</string>

    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="health_condition_text">My Health Condition</string>
    <string name="diseases_text">Common Diseases In My Area</string>
    <string name="stats_text">A Cumulative Statistic At Location</string>
    <string name="cough_string">Cough: </string>
    <string name="shortness_string">Shortness of Breath: </string>
    <string name="wheezing_string">Wheezing: </string>
    <string name="sneezing_string">Sneezing: </string>
    <string name="nasal_string">Nasal Obstruction: </string>
    <string name="itchy_string">Itchy Eyes: </string>
    <string name="allergy_string">Allergic To: </string>
    <string name="other_disease">Other: </string>
    <string name="additional_info">Additional Information: </string>
    <string name="user_feedback">My Feedback: </string>
    <string name="health_symptom_text">User\'s Symptoms</string>
    <string name="userDiseasesText">Common Diseases In Area</string>

    <string name="fever_string">Fever: </string>
    <string name="flu_string">Flu: </string>
    <string name="asthma_string">Asthma: </string>
    <string name="stats">View Stats Nearby</string>


    <string-array name="allergen_array">
        <item>None</item>
        <item>Pollen</item>
        <item>Mold</item>
        <item>Dust Mites</item>
        <item>Others</item>
    </string-array>

    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="button_signin_with_password">SIGN IN</string>

    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>

    <string name="button_create_account">Sign Up</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="button_sign_in">Sign In</string>

    <!-- Google Errors -->
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>

    <!-- OAuth Format -->
    <string name="oauth2_format">oauth2:%s</string>

    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with LifeSource servers…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="submit_string">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_details">Submitted Data</string>

    <!-- Geofence strings -->

    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="title_activity_stats">Stats at location</string>


</resources>
